casi se termina de integrar todo a panel admin faltan schedules y seguir probando en busca de errores
